- Changed lang level in pom.xml/build.xml (https://issues.redhat.com/browse/JGRP-2911)
- Removed redundant @Suppress annotations

- Removed ConcurrentLinkedBlockingQueue2 (not used)

- Removed commented code

- Removed ASYNC protocol (not used)

- Enhanced switch statements/expressions

- Fixes by upgrading to java 17

- Converted Tuple to record

- Added pattern variable to instanceof

- Turned AsciiString into a record

- Turned AsyncExecutor, ByteBufferOutputStream into a record

- Turned Configurator into a record

- Turned COUNTER into a record

- Turned Digest.Entry into a record

- Converted multiple smaller ancillary classes to records